<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="backClickListener"
            type="View.OnClickListener" />
        <variable
            name="qrCodeClickListener"
            type="View.OnClickListener" />
        <variable
            name="nmpbxWebsiteClickListener"
            type="View.OnClickListener" />
        <variable
            name="viewModel"
            type="org.linphone.ui.assistant.viewmodel.AccountLoginViewModel" />
        <variable
            name="qrCodeViewModel"
            type="org.linphone.ui.assistant.viewmodel.QrCodeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="?attr/color_main2_000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:onClick="@{backClickListener}"
                android:layout_width="@dimen/top_bar_height"
                android:layout_height="@dimen/top_bar_height"
                android:padding="15dp"
                android:src="@drawable/caret_left"
                android:contentDescription="@string/content_description_go_back_icon"
                android:visibility="@{viewModel.showBackButton ? View.VISIBLE : View.INVISIBLE, default=invisible}"
                app:tint="?attr/color_main2_500"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                style="@style/assistant_page_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assistant_account_login"
                android:textColor="?attr/color_text"
                app:layout_constraintBottom_toBottomOf="@id/back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/scan_qr_code"
                style="@style/secondary_button_label_style"
                android:layout_width="222dp"
                android:layout_height="85dp"
                android:layout_marginTop="32dp"
                android:drawableStart="@drawable/qr_code"
                android:drawablePadding="8dp"
                android:onClick="@{qrCodeClickListener}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/assistant_scan_qr_code"
                android:visibility="visible"
                app:drawableTint="@color/secondary_button_label_color"
                app:layout_constraintBottom_toTopOf="@+id/provisioning_url_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_max="@dimen/button_max_width" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/provisioning_url_label"
                style="@style/default_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/assistant_provisioning_url_explanation"
                android:textColor="?attr/color_main2_500"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/provisioning_url"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scan_qr_code"
                app:layout_constraintWidth_max="@dimen/text_input_max_width" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/provisioning_url"
                style="@style/default_text_style"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_background"
                android:enabled="@{!qrCodeViewModel.applyInProgress}"
                android:hint="@string/assistant_provisioning_url_placeholder"
                android:imeOptions="actionGo"
                android:inputType="text|textUri"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@={qrCodeViewModel.provisioningUrl}"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/apply_provisioning_url"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/provisioning_url_label"
                app:layout_constraintWidth_max="@dimen/text_input_max_width" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/apply_provisioning_url"
                style="@style/primary_button_label_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:enabled="@{!qrCodeViewModel.applyInProgress &amp;&amp; qrCodeViewModel.provisioningUrl.length() != 0, default=false}"
                android:gravity="center"
                android:onClick="@{() -> qrCodeViewModel.applyRemoteProvisioningUrl()}"
                android:text="@string/assistant_provisioning_url_submit"
                app:layout_constraintBottom_toTopOf="@+id/nmpbx_service_required"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/provisioning_url"
                app:layout_constraintWidth_max="@dimen/button_max_width" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nmpbx_service_required"
                style="@style/default_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:onClick="@{nmpbxWebsiteClickListener}"
                android:text="@string/assistant_nmpbx_service_required"
                android:textColor="?attr/color_main2_500"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/mountains"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apply_provisioning_url"
                app:layout_constraintWidth_max="@dimen/text_input_max_width" />

            <ImageView
                android:id="@+id/mountains"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginBottom="-7dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:rotation="0"
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/dots_repeating_horizontal"
                app:tint="?attr/color_main1_500" />

            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>